Change current song title getting algorithm
Not from the tab title, but from the page content.
It'll help with other services, like YouTube (with chapters).

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
 		"512": "images/icons/512.png"
 	},
 	"permissions": [
-		"activeTab"
+		"activeTab",
+		"scripting"
 	],
 	"host_permissions": [
 		"https://genius.com/*"
