--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
 	},
 	"permissions": [
 		"activeTab",
-		"scripting"
+		"scripting",
+		"storage"
 	],
 	"host_permissions": [
 		"https://genius.com/*"
