--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"archiver": "^6.0.0",
+		"remark-cli": "^12.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-preset-lint-recommended": "^6.1.3",
 		"rollup": "^4.9.6",
 		"rollup-plugin-multi-input": "^1.4.1",
 		"rollup-plugin-notify": "^1.1.0"
 	},
 	"scripts": {
+		"lint:docs": "remark -f .",
+		"lint": "pnpm run lint:docs",
 		"build:scripts": "rollup -c",
 		"build": "pnpm run build:scripts",
 		"watch:scripts": "pnpm run build:scripts --watch",
