--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@stylistic/stylelint-config": "^1.0.1",
 		"archiver": "^6.0.0",
 		"remark-cli": "^12.0.0",
 		"remark-gfm": "^4.0.0",
 		"remark-preset-lint-recommended": "^6.1.3",
 		"rollup": "^4.9.6",
 		"rollup-plugin-multi-input": "^1.4.1",
-		"rollup-plugin-notify": "^1.1.0"
+		"rollup-plugin-notify": "^1.1.0",
+		"stylelint": "^16.2.1",
+		"stylelint-config-standard": "^36.0.0"
 	},
 	"scripts": {
 		"lint:docs": "remark -f .",
-		"lint": "pnpm run lint:docs",
+		"lint:styles": "stylelint styles/",
+		"lint": "pnpm run lint:docs; docs_lint_result=$?; pnpm run lint:styles; styles_lint_result=$?; [ $styles_lint_result -eq 0 ] && [ $docs_lint_result -eq 0 ]",
 		"build:scripts": "rollup -c",
 		"build": "pnpm run build:scripts",
 		"watch:scripts": "pnpm run build:scripts --watch",
