Revert "Try Node.js cache in Cirrus CI config without `pnpm` installation"
This reverts commit 419112187e8ee00e6b6cf9bf641bde8b7b829296.

--- a/.cirrus.yaml
+++ b/.cirrus.yaml
@@ -8,6 +8,7 @@ node_modules_cache: &node_modules_cache
       - echo $CIRRUS_OS
       - cat package.json
   install_script:
+    - npm install -g pnpm
     - pnpm install
 
 remark_task:
