--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
+	"type": "module",
 	"dependencies": {
 		"fast-average-color": "^9.4.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.2.0",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@stylistic/eslint-plugin-js": "^2.1.0",
 		"@stylistic/stylelint-config": "^1.0.1",
 		"archiver": "^7.0.0",
 		"eslint": "^9.2.0",
+		"globals": "^15.2.0",
 		"remark-cli": "^12.0.0",
 		"remark-gfm": "^4.0.0",
 		"remark-preset-lint-recommended": "^6.1.3",
@@ -20,7 +24,7 @@
 	"scripts": {
 		"lint:docs": "remark -f .",
 		"lint:styles": "stylelint styles/",
-		"lint:scripts": "eslint --ignore-path .gitignore --ext .js,.mjs .",
+		"lint:scripts": "eslint",
 		"lint": "pnpm run lint:docs; docs_lint_result=$?; pnpm run lint:styles; styles_lint_result=$?; pnpm run lint:scripts && [ $styles_lint_result -eq 0 ] && [ $docs_lint_result -eq 0 ]",
 		"build:scripts": "rollup -c",
 		"build": "pnpm run build:scripts",
