--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@stylistic/eslint-plugin-js": "^2.1.0",
 		"@stylistic/stylelint-config": "^1.0.1",
-		"archiver": "^7.0.0",
 		"eslint": "^9.2.0",
 		"globals": "^15.2.0",
 		"remark-cli": "^12.0.0",
@@ -20,7 +19,8 @@
 		"rollup-plugin-multi-input": "^1.4.1",
 		"rollup-plugin-notify": "^1.1.0",
 		"stylelint": "^16.2.1",
-		"stylelint-config-standard": "^36.0.0"
+		"stylelint-config-standard": "^36.0.0",
+		"zip-a-folder": "^3.1.6"
 	},
 	"scripts": {
 		"lint:docs": "remark -f .",
