Move Popup Container (iframe) logic into an outer class
1. I tried it with `export`/`import` (`type: module`), didn't work:
   how to pass a class into injection function? It's not seriazable.
2. I've came with global definition and double script injection:
   Thanks to https://stackoverflow.com/a/73586624/2630849

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
 		"512": "images/icons/512.png"
 	},
 	"background": {
-		"service_worker": "scripts/compiled/service-worker.js"
+		"service_worker": "scripts/compiled/service-worker.js",
+		"type": "module"
 	},
 	"options_ui": {
 		"page": "pages/options.html",
