Add close button (with icon) for closing popup-iframe

--- a/manifest.json
+++ b/manifest.json
@@ -35,7 +35,11 @@
 	],
 	"web_accessible_resources": [
 		{
-			"resources": ["pages/popup.html", "styles/popup.css", "scripts/compiled/popup.js"],
+			"resources": [
+				"pages/popup.html",
+				"styles/popup.css",
+				"scripts/compiled/popup.js"
+			],
 			"matches": ["<all_urls>"]
 		}
 	]
