Return regular popup, but add a pin button
Now you will always open the default popup window,
but you can switch to inline iframe anytime.

Programatical popup openning will be released in Chrome later.

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
 	"description": "Display current song lyrics for music platforms, such as Spotify, Apple Music, Deezer, YouTube, etc.",
 	"version": "4.0.2",
 	"action": {
-		"popup": "pages/popup.html"
+		"default_title": "View current song lyrics on this site",
+		"default_popup": "pages/popup.html"
 	},
 	"icons": {
 		"16": "images/icons/16.png",
