--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@stylistic/eslint-plugin-js": "^2.6.2",
 		"@stylistic/stylelint-config": "^2.0.0",
 		"eslint": "^9.9.0",
+		"glob": "^11.0.0",
 		"globals": "^15.9.0",
 		"npm-run-all": "^4.1.5",
 		"remark-cli": "^12.0.1",
@@ -17,7 +18,6 @@
 		"remark-lint-list-item-indent": "^4.0.0",
 		"remark-preset-lint-recommended": "^7.0.0",
 		"rollup": "^4.20.0",
-		"rollup-plugin-multi-input": "^1.5.0",
 		"rollup-plugin-notify": "^1.1.0",
 		"stylelint": "^16.8.1",
 		"stylelint-config-standard": "^36.0.1",
